# rave-app-backend

./: .env.example  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: cd.yml
binaries/rave-app-backend/: Cargo.toml
binaries/rave-app-backend/src/: log.rs  main.rs
crates/axum-jwks/: Cargo.toml
crates/axum-jwks/src/: jwks.rs  token.rs
crates/rave-api/: Cargo.toml
crates/rave-api-entity/: Cargo.toml
crates/rave-api-graphql/: Cargo.toml
crates/rave-api-graphql/src/: error.rs  lib.rs  prelude.rs  schema.rs
crates/rave-api-graphql/src/mutation/: mod.rs  post.rs  user.rs
crates/rave-api-graphql/src/query/: feed.rs  mod.rs
crates/rave-api-iam/: Cargo.toml
crates/rave-api-iam/src/: access.rs  api_user.rs  error.rs  lib.rs  models.rs  prelude.rs
crates/rave-api-service-database/: Cargo.toml
crates/rave-api-service-database/src/: error.rs  lib.rs
crates/rave-api-service-feed-provider/: Cargo.toml
crates/rave-api-service-feed-provider/src/: lib.rs
crates/rave-api-service-iam/: Cargo.toml
crates/rave-api-service-iam/src/: api_user.rs  error.rs  lib.rs  models.rs  options.rs  prelude.rs
crates/rave-api/src/: db.rs  error.rs  lib.rs  options.rs  prelude.rs
crates/rave-api/src/graphql/: mod.rs  schema.rs  service.rs
crates/rave-api/src/graphql/mutation/: asset.rs  content.rs  mod.rs  post.rs  publication.rs  user.rs
crates/rave-api/src/graphql/query/: feed.rs  mod.rs  user.rs
crates/rave-api/src/services/: asset_provider.rs  database.rs  feed_provider.rs  iam.rs  mod.rs
crates/rave-api/src/services/iam/: api_user.rs  error.rs  mod.rs  models.rs
crates/rave-core-asset/: Cargo.toml
crates/rave-core-asset/src/: analyser.rs  asset_manager.rs  error.rs  lib.rs  options.rs  prelude.rs
crates/rave-core-asset/src/data_provider/: mod.rs
crates/rave-core-asset/src/data_provider/aws_s3/: mod.rs
crates/rave-core-common/: Cargo.toml
crates/rave-core-common/src/: lib.rs  prelude.rs
crates/rave-core-database/: Cargo.toml
crates/rave-core-database/src/: error.rs  lib.rs  prelude.rs  sqlx_extensions.rs
crates/rave-core-database/src/database/: mod.rs
crates/rave-core-database/src/database/cursor/: asset.rs  external_user.rs  mod.rs
crates/rave-core-database/src/tables/: asset.rs  content.rs  entity.rs  mod.rs
crates/rave-core-database/src/views/: external_user.rs  mod.rs
crates/rave-data/: Cargo.toml
crates/rave-data/src/: lib.rs
crates/rave-data/src/iam/: user.rs
crates/rave-embedded-database/: Cargo.toml
crates/rave-embedded-database/src/: error.rs  lib.rs  prelude.rs
crates/rave-embedded-database/tests/: populating.rs
crates/rave-entity/: Cargo.toml
crates/rave-entity-derive/: Cargo.toml
crates/rave-entity/src/: database.rs  lib.rs  prelude.rs
crates/rave-entity/src/database_views/: mod.rs  user.rs
crates/rave-entity/src/feed/: mod.rs
crates/rave-entity/src/graph/: user.rs
crates/rave-entity/src/iam/: mod.rs  user.rs
crates/rave-entity/src/post/: mod.rs
crates/rave-entity/src/tables/: asset.rs  content.rs  contents.rs  mod.rs
crates/rave-migration/: Cargo.toml
crates/rave-migration/src/: m20220101_000001_create_table.rs
docs/: project-structure.md  setup-auth0.md  setup-database.md
libraries/axum-jwks/: Cargo.toml
libraries/axum-jwks/src/: lib.rs
migrations/: 20231227194744_schemas.sql
scripts/database/: recreate.sh
