[package]
name = "rave-app-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rave-api = { path = "../../crates/rave-api" }
dotenv = "0.15.0"
clap = { version = "4.4.10", features = ["derive"] }
tokio = { version = "1.29", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rave-embedded-database = { path = "../../crates/rave-embedded-database", optional = true }

[features]
embedded-database = ["dep:rave-embedded-database"]