[package]
name = "rave-api-graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
tracing = "^0.1"
uuid = { version = "1.6", features = [ "v4", "serde" ] }
serde = { version = "1", features = ["derive"] }

async-graphql-axum = "6.0.11"

rave-entity = { path = "../rave-entity" }
rave-api-service-database = { path = "../rave-api-service-database" }
rave-api-service-feed-provider = { path = "../rave-api-service-feed-provider" }

[dependencies.axum]
version = "0.6"
features = ["tracing", "macros", "json", "ws", "multipart", "form"]
