[package]
name = "rave-api-service-iam"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-jwks = "0.5"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
tokio = { version = "1.29", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
async-graphql-axum = "6.0.11"
tracing = "^0.1"
async-trait = "^0.1"
async-recursion = "^1.0"

rave-entity = { path = "../rave-entity" }
rave-api-service-database = { path = "../rave-api-service-database" }

# TODO: remove dependency on axum
[dependencies.axum]
version = "0.6"
features = ["tracing", "macros", "json", "ws", "multipart", "form"]
