[package]
name = "rave-api"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "^0.15"
thiserror = "1"
tracing = "^0.1"
async-trait = "^0.1"
async-recursion = "^1.0"
uuid = { version = "1.6", features = [ "v4", "serde" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.29", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }

async-graphql-axum = "6.0.11"
axum-macros = "0.4"

rave-entity = { path = "../rave-entity" }
axum-jwks = { path = "../axum-jwks" }

[dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"]

[dependencies.axum]
version = "0.6"
features = ["tracing", "macros", "json", "ws", "multipart", "form"]

[dependencies.reqwest]
version = "0.11"
features = [ "json", "rustls-tls" ]
default-features = false