[package]
name = "rave-core-asset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1"
rave-core-database = { path = "../rave-core-database" }
rave-core-common = { path = "../rave-core-common" }
serde = { version = "1", features = ["derive"] }
aws-config= { version = "1.1.1", features = ["behavior-version-latest"] }
aws-sdk-s3= { version = "1.11.0", features = ["rt-tokio"] }

[dependencies.tokio]
version = "1.29"
features = [ "full" ]

