[package]
name = "rave-core-common"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
tracing = "^0.1"
async-trait = "^0.1"
uuid = { version = "1.6", features = [ "v4", "serde" ] }
chrono = { version = "*", features = [ "serde" ] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"]
