[package]
name = "rave-core-database"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

rave-core-common = { path = "../rave-core-common" }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"]
