[package]
name = "rave-embedded-database"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = {version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"] }
postgresql_embedded = "0.17.0"
thiserror = "1"
tokio = { version = "1.29", features = ["full"] }
tracing = "^0.1"
uuid = { version = "1.6", features = [ "v4" ]}

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }
