[package]
name = "rave-entity"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures-util = { version = "0.3", features = ["async-await", "compat", "sink"] }

[dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"]

[dependencies.async-graphql]
version = "7.0.0"
