[package]
name = "axum-jwks"
version = "0.5.0"
edition = "2021"
description = "Use a JSON Web Key Set (JWKS) to verify JWTs in Axum."
keywords = ["axum", "jwk", "jwks", "jwt"]

[dependencies]
axum = { version = "0.7", features = ["http2"]}
jsonwebtoken = { version = "9", default-features = false }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "1" }
tracing = { version = "0.1" }

[dependencies.reqwest]
version = "0.11"
features = [ "json", "rustls-tls" ]
default-features = false

[dev-dependencies]
tokio = { version = "1.29", features = ["macros"] }
serde_json = { version = "1" }
